<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Holochat</string>

    <string name="hint_first">FIRST NAME</string>
    <string name="hint_last">LAST NAME</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_password_again">RETYPE PASSWORD</string>
    <string name="hint_nickname">NICKNAME</string>
    <string name="hint_verification_code">VERIFICATION CODE</string>
    <string name="hint_nickname_again">RETYPE NICKNAME</string>

    <string name="action_register_short">REGISTER</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="Refresh_button">Refresh</string>
    <string name="action_back_to_signin">BACK TO SIGN IN</string>
    <string name="action_settings">Settings</string>
    <string name="action_back_to_sigin"> BACK TO SIGN IN</string>
    <string name="action_link">Full Forecast</string>
    <string name="action_forgot_pass"><u>Forgot Password?</u></string>
    <string name="action_send">SEND</string>
    <string name="action_save_changes">SAVE</string>

    <string name="view_verify_email">Registration was successful.\n A verification link has been sent to your email.</string>
    <string name="view_password_requirements">PASSWORD REQUIREMENTS\n\n- Be at least 6 characters long.\n- Have one uppercase.\n- Have one lowercase.\n- Have one number.\n- Have one special character.</string>
    <string name="view_title_forgot_password">FORGOT PASSWORD</string>
    <string name="view_forgot_password">Please enter your email to receive a verification code.</string>
    <string name="view_create_new_password">CREATE NEW PASSWORD</string>
    <string name="view_new_password">Enter the 4 digit verification code sent to your email and a new password.</string>
    <string name="view_tell_me">LET’S GET STARTED.</string>
    <string name="view_change_nickname">CHANGE NICKNAME</string>
    <string name="view_change_nickname_instructions">Enter the 4 digit verification code sent to your email and a new nickname.</string>

    <string name="title_profile">Profile</string>
    <string name="title_recents">Recents</string>
    <string name="title_weather">Weather</string>
    <string name="title_contacts">Contacts</string>

    <string name="weather_fragment_placeholder">Weather</string>
    <string name="add_user">Add User</string>
    <string name="where_add_user">This is where we will add users.</string>
    <string name="forecast_preview">Forecast Preview</string>
    <string name="title_activity_contact_tabbed">ContactTabbedActivity</string>
    <string name="contact_header">Contacts</string>
    <string name="contact_tab_text_1">Contacts</string>
    <string name="contact_tab_text_2">Requests</string>
    <string name="contact_tab_text_3">Search</string>
    <string name="contact_search_user_msg">Search for a Holochat user:</string>
    <string name="title_conact">Contacts</string>
    <string name="title_contact">Contact</string>
    <string name="title_members">Members</string>
    <string name="title_find_contact">Find Contact</string>

    <string name="switch_sign_in">STAY SIGNED IN</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_credits">Credits</string>

    <!--chatroom strings-->
    <string name="text_create">Create</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_chat_name">Name of Chatroom:</string>
    <string name="text_delete">Delete</string>
    <string name="text_add">add</string>
    <string name="text_chat_add_title">Add users to chatroom</string>
    <string name="text_chat_delete_dialog_prompt">This action will only remove yourself from the chatroom
                                                    and will not affect other users. Would you like to
                                                    delete yourself from the chatroom?</string>
    <string name="text_chat_delete_dialog_title">Delete Chatroom:</string>
    <string name="text_chat_add_person">Add contact to chatroom</string>
    <string name="text_chat_view_persons">View contacts in chatroom</string>

    <!--weather-->
    <string name="label_location">Current location:</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="base_url_service">https://team5-tcss450-holochat.herokuapp.com/</string>-
    <!--<string name="base_url_service">https://localhost:5000/</string>-->
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>

    <string-array name="chat_titles">
        <item>Chat 1</item>
        <item>Chat 2</item>
        <item>Chat 3</item>
    </string-array>

    <string-array name="chat_preview">
        <item>Preview</item>
        <item>Preview</item>
        <item>Preview</item>
    </string-array>
</resources>