<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterFragment">

    <TextView
        android:id="@+id/view_tell_me"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/view_tell_me"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <EditText
        android:id="@+id/edit_last"
        style="@android:style/Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/text_box"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_last"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/edit_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_first" />

    <EditText
        android:id="@+id/edit_first"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/text_box"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_first"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_nickname"
        style="@android:style/Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/text_box"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_nickname"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_last" />

    <EditText
        android:id="@+id/edit_email"
        style="@android:style/Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/text_box"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_nickname" />

    <EditText
        android:id="@+id/edit_password_1"
        style="@android:style/Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/text_box"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <EditText
        android:id="@+id/edit_password_2"
        style="@android:style/Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/text_box"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_password_again"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/action_register_short"
        android:textColor="@color/brown"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_2" />

    <TextView
        android:id="@+id/view_password_req"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="213dp"
        android:layout_height="134dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:background="#EFECE6"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowColor="@color/brown"
        android:shadowRadius="1"
        android:text="@string/view_password_requirements"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>