<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changeCredentials.RecoverPasswordFragment">

    <EditText
        android:id="@+id/edit_recover_password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_recover_password_verification_code" />

    <EditText
        android:id="@+id/edit_recover_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hint_password_again"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_recover_password1" />

    <EditText
        android:id="@+id/edit_recover_password_verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hint_verification_code"
        android:inputType="number"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_recover_password_instructions" />

    <TextView
        android:id="@+id/view_password_requirements"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="213dp"
        android:layout_height="134dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="64dp"
        android:background="#EFECE6"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowColor="@color/brown"
        android:shadowRadius="1"
        android:text="@string/view_password_requirements"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_recover_password2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save_change_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/action_save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_verification_code_password" />

    <TextView
        android:id="@+id/view_recover_password_instructions"
        android:layout_width="276dp"
        android:layout_height="86dp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/view_new_password"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send_verification_code_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="SEND CODE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_recover_password2" />


</androidx.constraintlayout.widget.ConstraintLayout>