<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/holoimg_3"
    tools:context=".ui.auth.signin.SignInFragment">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/style_round_corners"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/brown"
        android:textColorHint="@color/hint_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_fifty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_fifty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/edit_password"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/style_round_corners"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/brown"
        android:textColorHint="@color/hint_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_fifty" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        style="@android:style/Widget.Material.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_to_register"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/action_register_short"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"/>

    <Button
        android:id="@+id/button_to_forgot_pass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="@color/white"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:text="@string/action_forgot_pass"
        android:textColor="@color/colorSecondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switch_signin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/colorPrimary"
        android:checked="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/switch_sign_in"
        android:textColor="@color/colorSecondary"
        android:thumbTint="@color/colorSecondaryDark"
        android:trackTint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="137dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_img3"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="119dp" />

</androidx.constraintlayout.widget.ConstraintLayout>